--- a/tutoriales.html
+++ b/tutoriales.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="es">
     <head>
+         <link rel="icon" href="https://media.discordapp.net/attachments/858450288942645348/896171456218669096/images_2.png" sizes="32x32" type="image/png">
+      <meta name="description" content="Aprender a programar facil y rapido"/>
+
+<meta property="og:image" content="https://media.discordapp.net/attachments/858450288942645348/896171456218669096/images_2.png"/>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
